--- a/src/app/actividades/actividad-detalles-template/actividad-detalles-template.component.html
+++ b/src/app/actividades/actividad-detalles-template/actividad-detalles-template.component.html
@@ -2,22 +2,30 @@
   <div class="modal-overlay" (click)="closeModal()">
     <div class="modal" (click)="$event.stopPropagation()">
       <!-- Botón de Cierre -->
-      <button class="btn-close" (click)="closeModal()">×</button>
-
-      <h2>{{ actividadSeleccionada.nombre }}</h2>
-      <p>{{ actividadSeleccionada.descripcion }}</p>
-      <p>Instagram: <a [href]="actividadSeleccionada.instagram" target="_blank">{{ actividadSeleccionada.instagram }}</a></p>
-      
-      <!-- Asegurarse de que 'actividadSeleccionada.parque' existe -->
-      <p *ngIf="actividadSeleccionada.parque">Parque: {{ actividadSeleccionada.parque}}</p>
-
-      <div *ngIf="actividadSeleccionada.imagenes && actividadSeleccionada.imagenes.length > 0" class="carousel">
-        <div *ngFor="let imagen of actividadSeleccionada.imagenes" class="carousel-slide">
-          <img [src]="imagen" [alt]="actividadSeleccionada.nombre" />
+      <div><button class="btn-close" (click)="closeModal()">×</button>
+        <div class="row">
+          <h2>{{ actividadSeleccionada.nombre }}</h2>
+          <div class="switch">
+            <input type="checkbox" id="habilitado" [checked]="actividadSeleccionada.habilitado">
+            <label for="habilitado" class="slider"></label>
+            <span class="estado">{{ actividadSeleccionada.habilitado ? 'Habilitado' : 'En pausa' }}</span>
+          </div>
+          <p>{{ actividadSeleccionada.descripcion }}</p>
         </div>
-      </div>
+        
+        <p>Instagram: <a [href]="actividadSeleccionada.instagram" target="_blank">{{ actividadSeleccionada.instagram }}</a></p>
 
-      <button class="btn-registrar" (click)="registrarActividad()">Registrar</button>
+        <!-- Mostrar detalles del parque -->
+        <p *ngIf="parque">Parque: {{ parque.nombre }}</p>  <!-- Aquí mostramos el nombre del parque -->
+
+        <div *ngIf="actividadSeleccionada.imagenes && actividadSeleccionada.imagenes.length > 0" class="carousel">
+          <div *ngFor="let imagen of actividadSeleccionada.imagenes" class="carousel-slide">
+            <img [src]="imagen" [alt]="actividadSeleccionada.nombre" />
+          </div>
+        </div>
+
+        <button class="btn-registrar" (click)="registrarActividad()">Registrar</button>
+      </div>
     </div>
   </div>
 </div>
