--- a/src/app/actividades/actividades.component.html
+++ b/src/app/actividades/actividades.component.html
@@ -1,36 +1,49 @@
 <div class="container">
-    <h2>Busca y explora Actividades cercanas</h2>
-  
-    <p>¿Deseas registrar una actividad?</p>
-    <button (click)="openActividadModal()">Registrar Nueva Actividad</button>
-  
-    <div class="actividades-list">
-      <div *ngFor="let actividad of actividades" class="actividad-item">
-        <h3>{{ actividad.nombre }}</h3>
-        <p>{{ actividad.descripcion }}</p>
-  
-        <!-- Mostrar solo la primera imagen de la actividad (si existe) -->
-        <div *ngIf="actividad.imagenes && actividad.imagenes.length > 0" class="imagenes-container">
-          <img [src]="sanitizeUrl(actividad.imagenes[0])" [alt]="actividad.nombre" class="actividad-image" />
-        </div>
-        
-        <!-- Botón para ver detalles de la actividad -->
-        <button (click)="verDetallesActividad(actividad)">Ver detalles</button>
+  <h2>Busca y explora Actividades cercanas</h2>
+
+  <p>¿Deseas registrar una actividad?</p>
+  <button (click)="openNewActividadModal()">Registrar Nueva Actividad</button>
+
+  <label for="filtro-parque">Filtrar por Parque:</label>
+  <select id="filtro-parque" [(ngModel)]="parqueSeleccionado" (change)="onParqueChange()">
+    <option [value]="null">Todos los parques</option>
+    <option *ngFor="let parque of parques" [value]="parque.id">{{ parque.nombre }}</option>
+  </select>
+
+  <div class="actividades-list">
+    <div *ngFor="let actividad of actividades" class="actividad-item">
+      <h3>{{ actividad.nombre }}</h3>
+<!--       <p>{{ actividad.descripcion }}</p> -->
+<!--       <p>{{ actividad.comentarios }}</p> -->
+      <!-- Mostrar el estado habilitado o en pausa -->
+      <div class="switch">
+        <input type="checkbox" id="habilitado" [checked]="actividad.habilitado" disabled />
+        <label for="habilitado" class="slider"></label>
+        <span class="estado">{{ actividad.habilitado ? 'Habilitado' : 'En pausa' }}</span>
       </div>
+
+      <!-- Mostrar solo la primera imagen de la actividad (si existe) -->
+      <div *ngIf="actividad.imagenes && actividad.imagenes.length > 0" class="imagenes-container">
+        <img [src]="sanitizeUrl(actividad.imagenes[0])" [alt]="actividad.nombre" class="actividad-image" />
+      </div>
+
+      <!-- Botón para ver detalles de la actividad -->
+      <button (click)="verDetallesActividad(actividad)">Ver detalles</button>
     </div>
-  
-    <app-actividad-detalles-template *ngIf="actividadSeleccionada"
-      [actividadSeleccionada]="actividadSeleccionada"></app-actividad-detalles-template>
-  
-    <!-- Modal para registrar nueva actividad -->
-    <ng-template #newActividad>
-      <app-new-actividad (closeModal)="openActividadModal()"></app-new-actividad>
-    </ng-template>
-  
-    <!-- Modal para ver detalles de la actividad -->
-    <ng-template #actividadDetalleTemplate>
-      <app-actividad-detalles-template *ngIf="actividadSeleccionada"
-          [actividadSeleccionada]="actividadSeleccionada"></app-actividad-detalles-template>
-    </ng-template>
   </div>
-  
+
+  <app-actividad-detalles-template *ngIf="actividadSeleccionada"
+    [actividadSeleccionada]="actividadSeleccionada"></app-actividad-detalles-template>
+
+  <!-- Modal para registrar nueva actividad -->
+  <ng-template #newActividad>
+    <app-new-actividad (closeModal)="openNewActividadModal()"></app-new-actividad>
+  </ng-template>
+
+  <!-- Modal para ver detalles de la actividad -->
+  <app-actividad-detalles-template 
+    *ngIf="actividadSeleccionada"
+    [actividadSeleccionada]="actividadSeleccionada"
+    (cerrarModal)="actividadSeleccionada = null">
+  </app-actividad-detalles-template>
+</div>
