--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-header></app-header>
 <router-outlet />
 <app-modal></app-modal>
+<app-footer></app-footer>
+<!-- <app-aside-publicitario></app-aside-publicitario> -->
