--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -17,7 +17,7 @@
           <div class="contact_info">
             
             <p><i class="fa-solid fa-phone"></i>(351) 43727282</p>
-            <p><i class="fa-solid fa-envelope"></i> info&#64;planetsuper.com.ar</p>        
+            <p><i class="fa-solid fa-envelope"></i> info&#64;alparque.com.ar</p>        
             <p>
               <i class="fa-solid fa-location-dot"></i>Galería Muñoz-9 de julio
               160
