--- a/src/app/dashboard-profile/dashboard-profile.component.html
+++ b/src/app/dashboard-profile/dashboard-profile.component.html
@@ -1,44 +1,44 @@
-<!-- <main>
-  <section class="table_section" *ngIf="!isAuthenticated">
-    <div class="user_banner">
-      <div class="user_data">
-        <div class="user_img" (click)="goToProfile()">
-        </div>
-     >
-        <span>ID: {{ user.id }}</span>
-        <span>Email: {{ user.email }}</span>
-        <span>Nombre: {{ user.first_name }}</span>
-        <span>Apellido: {{ user.last_name }}</span>
-        <span>Dirección: {{ user.address }}</span>
-        <span>Teléfono: {{ user.phone }}</span>
-      </div>
-      <button class="logout_btn" (click)="logout()">Cerrar sesión</button>
-      <button class="edit_profile_btn" (click)="goToProfile()">Editar tu perfil</button>
-    
-      <button class="imc_btn" (click)="openIMCModal()">Calcular IMC</button>
-    </div>
-  </section>
-</main> -->
 <main>
-  <section class="table_section" *ngIf="!isAuthenticated">
-    <div class="user_banner">
-      <div class="user_data">
-        <div class="user_img" (click)="triggerFileInput()">
-          <img [src]="user.image || defaultImage" alt="User Profile Picture">
+  <div class="row-container">
+    <section class="table_section" *ngIf="!isAuthenticated">
+      <div class="user_banner">
+        <div class="user_data">
+          <div class="user_img" (click)="triggerFileInput()">
+            <img [src]="user.image" alt="User Profile Picture">
+          </div>
+          <input type="file" (change)="onFileSelected($event)" accept="image/*">
+          <span>ID: {{ user.id }}</span>
+          <span>Email: {{ user.email }}</span>
+          <span>Nombre: {{ user.first_name }}</span>
+          <span>Apellido: {{ user.last_name }}</span>
+          <span>Teléfono: {{ user.phone }}</span>
+          <span>Sexo: {{ user.gender }}</span>
         </div>
-        <input #fileInput type="file" (change)="onFileSelected($event)" accept="image/*" hidden />
-        <span>ID: {{ user.id }}</span>
-        <span>Email: {{ user.email }}</span>
-        <span>Nombre: {{ user.first_name }}</span>
-        <span>Apellido: {{ user.last_name }}</span>
-        <span>Dirección: {{ user.address }}</span>
-        <span>Teléfono: {{ user.phone }}</span>
+        <button class="edit_profile_btn" (click)="goToProfile()">Editar tu perfil</button>
       </div>
-      <button class="logout_btn" (click)="logout()">Cerrar sesión</button>
-      <button class="edit_profile_btn" (click)="goToProfile()">Editar tu perfil</button>
+    </section>
+    <!-- Card Tus Estadísticas -->
+    <div class="card">
+      <h3>Tus Estadísticas</h3>
+      <p>Consulta tus estadísticas de progreso.</p>
       <button class="imc_btn" (click)="openIMCModal()">Calcular IMC</button>
     </div>
-  </section>
+
+    <!-- Card Tus Actividades -->
+    <div class="card">
+      <h3>Tus Actividades</h3>
+      <p>Revisa tu historial de actividades.</p>
+      <ul *ngIf="actividades.length > 0">
+        <li *ngFor="let actividad of actividades">
+          <a [routerLink]="['/actividad', actividad.actividad]">
+            {{ actividad.actividad.nombre }} </a>
+        </li>
+      </ul>
+      <p *ngIf="actividades.length === 0">No tienes actividades asociadas.</p>
+    </div>
+    <!-- Botón Cerrar sesión -->
+    <button class="logout_btn" (click)="logout()">Cerrar sesión</button>
+  </div>
 </main>
 
 <ng-template #profile>
