--- a/src/app/actividades/actividad-detalles-template.component.html
+++ b/src/app/actividades/actividad-detalles-template.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<!-- <div class="card">
     <div class="card-body">
       <h3>{{ actividad.nombre }}</h3>
       <p>{{ actividad.descripcion }}</p>
@@ -7,6 +7,7 @@
       <p><strong>Teléfono:</strong> {{ actividad.telefono }}</p>
       <p><strong>Integrantes:</strong> {{ actividad.integrantes }}</p>
       <p><strong>Parque:</strong> {{ actividad.parque }}</p>
+      <p><strong>Habilitado</strong> {{ actividad.habilitado }}</p>
     </div>
   </div>
-  
+   -->
