--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,8 +2,8 @@
     <section class="form_login">
         <form id="form" [formGroup]="form" (ngSubmit)="onSubmit($event)">
         <div class="title_login">
-      <!--       <img src="../../assets/image.png" alt="Logo" class="logo"> -->
-            <h1>PERFILES</h1>
+            <img src="../../assets/alparquelogo2.jpg" alt="Logo" class="logo">
+         <!--    <h1>ALPARQUE</h1> -->
         </div>
             <h2>Login</h2> 
         
