--- a/src/app/parques/parques.component.css
+++ b/src/app/parques/parques.component.css
@@ -1,44 +1,52 @@
+.container  {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: url('https://res.cloudinary.com/dhufclese/image/upload/v1739460069/sarmientoturismo3_cuu1vq.jpg');
+  background-size: cover;
+  background-attachment: fixed;
+}
 .parques-list {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
-  }
+    justify-content: center;
+    align-items: center;
   
-  .parque-item {
+}
+  
+.parque-item {
     border: 1px solid #ccc;
     padding: 10px;
     width: 300px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     transition: transform 0.3s;
-  }
-  
-  .parque-item:hover {
+    background-color: rgba(255, 255, 255, 0.8); /* Fondo blanco translúcido para destacar el contenido */
+}
+
+.parque-item:hover {
     transform: scale(1.05);
-  }
-  
-  .parque-image {
+}
+
+.parque-image {
     width: 100%;
-    height: auto;
+    height: 300px; /* Tamaño fijo para todas las imágenes */
+    object-fit: cover; /* Asegura que la imagen cubra el área sin distorsión */
     border-radius: 8px;
-  }
-  
-  button {
+}
+
+button {
     background-color: #4CAF50;
     color: white;
     padding: 10px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-  }
-  
-  button:hover {
+}
+
+button:hover {
     background-color: #45a049;
-  }
-  .parque-image {
-    width: 100%;
-    height: 300px;  /* Tamaño fijo para todas las imágenes */
-    object-fit: cover; /* Asegura que la imagen cubra el área sin distorsión */
-    border-radius: 8px;
-  }
-  
+}
