--- a/src/app/registro/registro.component.css
+++ b/src/app/registro/registro.component.css
@@ -9,7 +9,15 @@ main {
     /* background: url(../assets/fondo2.jpg); */
     background-size: cover;
     background-attachment: fixed;
-    background-image: url('../../assets/image.png');
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: url('https://res.cloudinary.com/dhufclese/image/upload/v1739460069/sarmientoturismo3_cuu1vq.jpg');
+    background-size: cover;
+    background-attachment: fixed;
+    
 }
 
 .form_registro{
@@ -141,6 +149,40 @@ main {
 
 .link{
     cursor: pointer;
+    color: #016699;
 }
 
-.logo { width: 100px; height: 100px; background-image: url('../../assets/image.png'); background-size: cover; background-position: center; border-radius: 50%; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); transition: transform 0.3s ease-in-out; }
+.logo-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* Ajusta según el diseño */
+}
+
+.logo {
+    width: 200px;
+    height: 200px;
+    background-image: url('https://res.cloudinary.com/dhufclese/image/upload/v1742853820/alparquelocologo_n8vgbc.jpg');
+    background-size: cover;
+    background-position: center;
+    border-radius: 50%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s ease-in-out;
+    animation: wave 3s infinite alternate ease-in-out;
+}
+
+/* Efecto de flotación suave */
+@keyframes wave {
+    0% {
+        transform: translateY(0px);
+    }
+    100% {
+        transform: translateY(-10px);
+    }
+}
+
+/* Efecto al pasar el mouse */
+.logo:hover {
+    transform: scale(1.1) rotate(5deg);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+}
