--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,1 +1,46 @@
-<p>footer works!</p>
+<footer id="footer" class="footer">
+    <div class="ads-container">
+        <div class="ad">
+            <img src="https://res.cloudinary.com/dhufclese/image/upload/v1739460069/sarmientoturismo3_cuu1vq.jpg"
+                alt="Publicidad 1">
+            <p>Descubre nuevos eventos en tu ciudad. ¡No te los pierdas!</p>
+        </div>
+        <div class="ad">
+            <img src="https://res.cloudinary.com/dhufclese/image/upload/v1742495091/WhatsApp_Image_2025-03-20_at_15.24.27_zpbnxf.jpg"
+                alt="Publicidad 2">
+            <p>Bicicleteria a Domicilio</p>
+            <div class="social-icons">
+                <a href="https://www.instagram.com/" target="_blank">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram"
+                        width="40">
+                </a>
+                <a href="https://www.facebook.com/" target="_blank">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg"
+                        alt="Facebook" width="40">
+                </a>
+                <a href="https://wa.me/" target="_blank">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp"
+                        width="40">
+                </a>
+            </div>
+        </div>
+        <div class="ad">
+            <img src="https://res.cloudinary.com/dhufclese/image/upload/v1742497460/lohi_qgsxzl.jpg" alt="Publicidad 3">
+            <p>Desarrollo de Software a medida</p>
+            <div class="social-icons">
+                <a href="https://www.instagram.com/" target="_blank">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram"
+                        width="40">
+                </a>
+                <a href="https://www.facebook.com/" target="_blank">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg"
+                        alt="Facebook" width="40">
+                </a>
+                <a href="https://wa.me/" target="_blank">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp"
+                        width="40">
+                </a>
+            </div>
+        </div>
+    </div>
+</footer>
