--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -32,7 +32,7 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" routerLink="/about-us" routerLinkActive="active">Eventos y ultimas noticias</a>
+        <a class="nav-link" routerLink="/eventos" routerLinkActive="active">Eventos y ultimas noticias</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" *ngIf="isLoggedIn" routerLink="/dashboard-profile" routerLinkActive="active">MI PERFIL</a>
