MVP basico , fix error

--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -1,7 +1,6 @@
-/* <----------Contact Section---------> */
-/* *{ background-image: url('../../assets/image.png');}
+
  */.form_contact__container {
-    background-image: url('../../assets/image.png');
+    background-image: url('https://res.cloudinary.com/dhufclese/image/upload/v1739460069/sarmientoturismo3_cuu1vq.jpg');
     padding: 40px 0;
     display: flex;
     justify-content: center;
