nuevo environment de produccion y desarrollo, responsividad en el header, menu desplegable

--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -1,5 +1,5 @@
 
- */.form_contact__container {
+ *.form_contact__container {
     background-image: url('https://res.cloudinary.com/dhufclese/image/upload/v1742994962/sarmientoturismo3_asikld.jpg');
     padding: 40px 0;
     display: flex;
