--- a/src/app/dashboard-profile/profile-template/profile-template.component.html
+++ b/src/app/dashboard-profile/profile-template/profile-template.component.html
@@ -11,13 +11,13 @@
 
     <label>Teléfono:</label>
     <input type="text" formControlName="phone" />
-    <label>Sexo:</label>
+   <!--  <label>Sexo:</label>
     <select formControlName="gender">
       <option value="">Seleccione...</option>
       <option value="Masculino">Masculino</option>
       <option value="Femenino">Femenino</option>
       <option value="Otro">Otro</option>
-    </select>
+    </select> -->
     
     <div style="display: flex; justify-content: space-between;">
       <button type="button" class="cancel" (click)="onCancel()">Cancelar</button>
