--- a/src/app/parques/parques.component.html
+++ b/src/app/parques/parques.component.html
@@ -1,28 +1,30 @@
 <div class="container">
-<h1>Busca y explora Parques y plazas cercanos</h1>
+  <h1>Busca y explora Parques y plazas cercanos</h1>
 
-<p>¿Deseas registrar un parque?</p>
-<button (click)="openModal()">Registrar Nuevo Parque</button>
-<br>
+  <p>¿Deseas registrar un parque?</p>
+  <button (click)="openModal()">Registrar Nuevo Parque</button>
+  <br>
 
-<div class="parques-list">
-  <div *ngFor="let parque of parques" class="parque-item">
-    <h3>{{ parque.nombre }}</h3>
-    <p>{{ parque.descripcion }}</p>
-    <p><strong>Ubicación:</strong> {{ parque.ubicacion }}</p>
+  <div class="parques-list">
+    <div *ngFor="let parque of parques" class="parque-item">
+      <h3>{{ parque.nombre }}</h3>
+      <p>{{ parque.descripcion }}</p>
+      <p><strong>Ubicación:</strong> {{ parque.ubicacion }}</p>
 
-    <!-- Mostrar solo la primera imagen del parque (si existe) -->
-    <div *ngIf="parque.imagenes && parque.imagenes.length > 0" class="imagenes-container">
-      <img [src]="sanitizeUrl(parque.imagenes[0])" 
-           [alt]="parque.nombre" 
-           class="parque-image" />
+      <!-- Mostrar solo la primera imagen del parque (si existe) -->
+      <div *ngIf="parque.imagenes && parque.imagenes.length > 0" class="imagenes-container">
+        <img [src]="sanitizeUrl(parque.imagenes[0])"
+             [alt]="parque.nombre"
+             class="parque-image"
+             width="200" height="200" /> <!-- Ajusta el tamaño de la imagen aquí -->
+      </div>
+
+      <!-- Botón para ver detalles del parque -->
+      <button (click)="verDetalles(parque)">Ver detalles</button>
     </div>
-
-    <!-- Botón para ver detalles del parque -->
-    <button (click)="verDetalles(parque)">Ver detalles</button>
   </div>
 </div>
-</div>
+
 <!-- Modal para registrar nuevo parque -->
 <ng-template #newParque>
   <app-new-parque (closeModal)="closeModal()"></app-new-parque>
