--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -19,25 +19,24 @@
             <p><i class="fa-solid fa-phone"></i>(351) 43727282</p>
             <p><i class="fa-solid fa-envelope"></i> info&#64;alparque.com.ar</p>        
             <p>
-              <i class="fa-solid fa-location-dot"></i>Galería Muñoz-9 de julio
-              160
+              <i class="fa-solid fa-location-dot"></i>Cordoba Capital
             </p>
           </div>
           <div class="social_links">
             <span class="second_text">Redes Sociales:</span>
             <ul class="social_list">
               <li>
-                <a href="https://github.com/Web-Developers2-0/ProyectoIntegrador2">
+                <a href="">
                   <i class="fa-brands fa-square-facebook"></i>
                 </a>
               </li>
               <li>
-                <a href="https://github.com/Web-Developers2-0/ProyectoIntegrador2">
+                <a href="">
                   <i class="fa-brands fa-square-twitter"></i>
                 </a>
               </li>
               <li>
-                <a href="https://github.com/Web-Developers2-0/ProyectoIntegrador2">
+                <a href="">
                   <i class="fa-brands fa-square-instagram"></i>
                 </a>
               </li>
